[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "missionutils"
version = "0.1.0"
description = "Reusable mission and telemetry utility functions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "John Cartagena" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]